many to many relations created in User.java and CourseEntity.java. openapi.yaml has updated. End of assigment 3
